--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ name = "zero2prod"
 [dependencies]
 actix-web = "4.3.1"
 serde = { version = "1.0.175", features = ["derive"] }
+sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
 tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
 
 [dev-dependencies]
