--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,14 @@ name = "zero2prod"
 actix-web = "4.3.1"
 chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
 config = "0.13.3"
+once_cell = "1.18.0"
 serde = { version = "1.0.175", features = ["derive"] }
 sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
 tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
+tracing = { version = "0.1.37", features = ["log"] }
+tracing-bunyan-formatter = "0.3.8"
+tracing-log = "0.1.3"
+tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
 uuid = { version = "1.4.1", features = ["v4"] }
 
 [dev-dependencies]
