--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -1,7 +1,7 @@
 application:
   port: 8000
 database:
-  host: "127.0.0.1"
+  host: 127.0.0.1
   port: 5435
   username: "postgres"
   password: "password"
