--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,12 @@ tracing-actix-web = "0.7.6"
 tracing-bunyan-formatter = "0.3.8"
 tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
+unicode-segmentation = "1.10.1"
 uuid = { version = "1.4.1", features = ["v4"] }
+validator = "0.16.1"
 
 [dev-dependencies]
 reqwest = "0.11.18"
+claims = "0.7.1"
+fake = "2.8.0"
+proptest = "1.2.0"
