--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,12 @@ tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"]
 unicode-segmentation = "1.10.1"
 uuid = { version = "1.4.1", features = ["v4"] }
 validator = "0.16.1"
+reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false }
 
 [dev-dependencies]
-reqwest = "0.11.18"
 claims = "0.7.1"
 fake = "2.8.0"
 proptest = "1.2.0"
+wiremock = "0.5.19"
+tokio = { version = "1.29.1", features = ["rt", "macros"] }
+serde_json = "1.0.107"
