--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ unicode-segmentation = "1.10.1"
 uuid = { version = "1.4.1", features = ["v4"] }
 validator = "0.16.1"
 reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false }
+strum = "0.25.0"
+strum_macros = "0.25.2"
 
 [dev-dependencies]
 claims = "0.7.1"
