--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ validator = "0.16.1"
 reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false }
 strum = "0.25.0"
 strum_macros = "0.25.2"
+rand = { version = "0.8.5", features = ["std_rng"] }
 
 [dev-dependencies]
 claims = "0.7.1"
