--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-feat
 strum = "0.25.0"
 strum_macros = "0.25.2"
 rand = { version = "0.8.5", features = ["std_rng"] }
+thiserror = "1.0.49"
+anyhow = "1.0.75"
 
 [dev-dependencies]
 claims = "0.7.1"
