--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ strum_macros = "0.25.2"
 rand = { version = "0.8.5", features = ["std_rng"] }
 thiserror = "1.0.49"
 anyhow = "1.0.75"
+regex = "1.9.6"
 
 [dev-dependencies]
 claims = "0.7.1"
