--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ rand = { version = "0.8.5", features = ["std_rng"] }
 thiserror = "1.0.49"
 anyhow = "1.0.75"
 regex = "1.9.6"
+tera = "1.19.1"
 
 [dev-dependencies]
 claims = "0.7.1"
